deploy/kubernetes/base/network-policies/30-pricing-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pricing-api-network
  namespace: micros-02-qa
  labels:
    app.kubernetes.io/name: pricing-api-network
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: micros-02-two-services-over-http
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pricing-service
      app.kubernetes.io/component: api

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kong
      ports:
        - protocol: TCP
          port: 8080

    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: catalog-service
              app.kubernetes.io/component: api
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: pricing-service-db
              app.kubernetes.io/component: database
      ports:
        - protocol: TCP
          port: 5432
